6697534: Premature GC and invalid lgrp selection with NUMA-aware allocator

Don't move tops of the chunks in ensure_parsibility(). Handle the situation with Solaris when a machine has a locality group with no memory.

Reviewed-by: apetrusenko, jcoomes, ysr